Changed the HTML for the site.

--- a/blog/templates/blog/help.html
+++ b/blog/templates/blog/help.html
@@ -25,14 +25,15 @@
 
             <h4>2.设备信息</h4>
             <p>①通过【名称】列下方按钮点击后可进行相关设备信息备注。</p>
-
+            <img src="{% static 'pic/t2.png' %}">
             <h4>3.安装APK</h4>
             <p>①使用网站链接下载安装</p>
             <p>在常用页-软件安装中输入链接，点击下载，此时设备上会打开浏览器下载文件，其余部分手动操作。</p>
+            <img src="{% static 'pic/t3.png' %}">
 
             <p>②上传APK文件设备（或上传二维码到设备）</p>
-            <p>在文件页-最下方上传文件，出现上传成功提示后，可在设备根目录tmp文件夹内发现已上传的文件。（由于上传中无进度条，上传比较大文件时，可查看自己的网络上传速度，判断是否仍在上传中，如查看360加速球）</p><br>
-
+            <p>在文件页-最下方上传文件，出现上传成功提示后，可在设备根目录tmp文件夹内发现已上传的文件。（由于上传中无进度条，上传比较大文件时，可查看自己的网络上传速度，判断是否仍在上传中，如查看360加速球）</p>
+            <img src="{% static 'pic/t4.png' %}"><img src="{% static 'pic/t5.png' %}"><br><br>
 
             <h2>开发调试</h2>
             <p>如开发人员需进行调试（获取日志，断点等），可进行无线连接adb后进行调试。但需满足以下环境：</p>
@@ -42,10 +43,10 @@
             <h4>2.无线连接设备</h4>
             <p>①使用：adb connect【设备IP】命令连接设备（如，adb connect 172.18.1.1）</p>
             <p>平台每个设备都有IP（图1），通常情况下，已开启连接权限，直接使用命令能连接成功（图2），但部分机型系统限制开启权限时间（如，OPPO,vivo），该情况可手动进入该设备的【开发者模式】打开调试开关，再次使用命令进行连接。</p>
-
+            <img src="{% static 'pic/t6.png' %}"><img src="{% static 'pic/t7.png' %}">
             <p>②使用：adb devices 命令查看连接设备情况</p>
             <p>该命令可查看本机与设备的连接情况</p><br>
-
+            <img src="{% static 'pic/t8.png' %}">
             <p>至此，无线连接配置完成，平时该怎么调试就怎么调试。（安卓开发编辑器应该也能搜索到已连接的设备。如没有找到设备，请百度对应开发编辑器无线连接设备条件）</p><br>
 
             <p>补充：adb常用调试命令(可百度关键字查看命令大全)</p>
@@ -61,7 +62,7 @@
 
             <h4>3.设备界面</h4>
             <p>有时会出现游戏横屏但视图还是竖屏情况，此时点击常用页-修复选择按钮可以修复。</p>
-
+            <img src="{% static 'pic/t9.png' %}">
             <h4>4.界面卡住</h4>
             <p>如遇卡机现象，应该是公司WIFI断开了，导致平台服务断开连接，需等待一段时间待WIFI稳定重连。（目前使用公用WIFI:GoodWireless-5G-2导致）</p><br>
 
